# Interoperability-DL-Frameworks

./: path.csv  pyproject.toml
exports/export_scripts/: keras_to_onnx.py  pt_to_onnx.py
training/keras/: rmse_port_keras_pt.py  validate_by_timestep.py
training/pytorch/: Palma_model.py  pt_validation.py
